[gd_scene load_steps=49 format=3 uid="uid://cj8dauq7uwgiu"]

[ext_resource type="Script" path="res://scenes/Enemy/Enemy.gd" id="1_17d06"]
[ext_resource type="Texture2D" uid="uid://xydyogi8r2dj" path="res://assets/sprites/Characters/Robot/movement/enemy.png" id="2_1grgf"]
[ext_resource type="Texture2D" uid="uid://w3ly6cgxj84v" path="res://assets/sprites/Characters/Robot/attack/attack.png" id="2_lfgcq"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wi8uh"]
atlas = ExtResource("2_lfgcq")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flwvn"]
atlas = ExtResource("2_lfgcq")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc22p"]
atlas = ExtResource("2_lfgcq")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ejyl"]
atlas = ExtResource("2_lfgcq")
region = Rect2(192, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iro4g"]
atlas = ExtResource("2_lfgcq")
region = Rect2(256, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dk4kl"]
atlas = ExtResource("2_lfgcq")
region = Rect2(320, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3yxex"]
atlas = ExtResource("2_lfgcq")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8kodq"]
atlas = ExtResource("2_lfgcq")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mguop"]
atlas = ExtResource("2_lfgcq")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ruinn"]
atlas = ExtResource("2_lfgcq")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ijjv"]
atlas = ExtResource("2_lfgcq")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_127a8"]
atlas = ExtResource("2_lfgcq")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a10h6"]
atlas = ExtResource("2_lfgcq")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7xs7x"]
atlas = ExtResource("2_lfgcq")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ubhri"]
atlas = ExtResource("2_lfgcq")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pie6h"]
atlas = ExtResource("2_lfgcq")
region = Rect2(192, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dqjou"]
atlas = ExtResource("2_lfgcq")
region = Rect2(256, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uum70"]
atlas = ExtResource("2_lfgcq")
region = Rect2(320, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_swt1g"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 160, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ygtkl"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 160, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_djkhc"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 160, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjkys"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pf5o6"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrghy"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d3qkq"]
atlas = ExtResource("2_1grgf")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hgess"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n5l0f"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8o0dj"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cxxng"]
atlas = ExtResource("2_1grgf")
region = Rect2(192, 64, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gmcey"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1j2ap"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvpr7"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpnql"]
atlas = ExtResource("2_1grgf")
region = Rect2(192, 128, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_55xcq"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_utrke"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pn5cb"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_edjpo"]
atlas = ExtResource("2_1grgf")
region = Rect2(192, 96, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_05fll"]
atlas = ExtResource("2_1grgf")
region = Rect2(0, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rsvb8"]
atlas = ExtResource("2_1grgf")
region = Rect2(64, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4khwv"]
atlas = ExtResource("2_1grgf")
region = Rect2(128, 32, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_25d63"]
atlas = ExtResource("2_1grgf")
region = Rect2(192, 32, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sutga"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wi8uh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_flwvn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc22p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ejyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iro4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dk4kl")
}],
"loop": false,
"name": &"attack_down",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yxex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8kodq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mguop")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ruinn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ijjv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_127a8")
}],
"loop": false,
"name": &"attack_left",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a10h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7xs7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ubhri")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pie6h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dqjou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uum70")
}],
"loop": false,
"name": &"attack_up",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_swt1g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ygtkl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_djkhc")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjkys")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pf5o6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrghy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d3qkq")
}],
"loop": true,
"name": &"down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hgess")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n5l0f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8o0dj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cxxng")
}],
"loop": true,
"name": &"left",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gmcey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1j2ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvpr7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cpnql")
}],
"loop": true,
"name": &"left_down",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_55xcq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utrke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pn5cb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_edjpo")
}],
"loop": true,
"name": &"left_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_05fll")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rsvb8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4khwv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_25d63")
}],
"loop": true,
"name": &"up",
"speed": 6.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_i52du"]
radius = 3.0
height = 10.0

[sub_resource type="CircleShape2D" id="CircleShape2D_dgbut"]
radius = 147.839

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r7uh0"]
size = Vector2(46, 39)

[node name="Enemy" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
y_sort_enabled = true
collision_layer = 2
collision_mask = 2
script = ExtResource("1_17d06")

[node name="Enemy" type="AnimatedSprite2D" parent="."]
position = Vector2(-1, -2)
sprite_frames = SubResource("SpriteFrames_sutga")
animation = &"up"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_i52du")

[node name="detection_area" type="Area2D" parent="."]
position = Vector2(0.5, 12.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-0.5, -12.6839)
scale = Vector2(0.7, 0.7)
shape = SubResource("CircleShape2D_dgbut")

[node name="hitbox_enemy" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox_enemy"]
position = Vector2(-1, -0.5)
shape = SubResource("RectangleShape2D_r7uh0")

[node name="attack_cooldown" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="Enemy" to="." method="_on_enemy_animation_finished"]
[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="area_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_area_entered"]
[connection signal="body_entered" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_entered"]
[connection signal="body_exited" from="hitbox_enemy" to="." method="_on_hitbox_enemy_body_exited"]
[connection signal="timeout" from="attack_cooldown" to="." method="_on_attack_cooldown_timeout"]
